Updated to support join table
